--- a/environment.yml
+++ b/environment.yml
@@ -4,20 +4,28 @@ channels:
   - conda-forge
 dependencies:
   - _pytorch_select=0.1=cpu_0
+  - aiohttp=3.8.1=py39hca72f7f_1
+  - aiosignal=1.2.0=pyhd3eb1b0_0
   - astroid=2.9.0=py39hecd8cb5_0
+  - async-timeout=4.0.1=pyhd3eb1b0_0
+  - attrs=21.4.0=pyhd3eb1b0_0
   - blas=1.0=mkl
+  - blinker=1.4=py39hecd8cb5_0
   - brotli=1.0.9=hb1e8313_2
   - brotlipy=0.7.0=py39h9ed2024_1003
   - bzip2=1.0.8=h1de35cc_0
-  - ca-certificates=2022.4.26=hecd8cb5_0
+  - c-ares=1.18.1=hca72f7f_0
+  - ca-certificates=2022.07.19=hecd8cb5_0
   - certifi=2022.6.15=py39hecd8cb5_0
   - cffi=1.15.0=py39hc55c11b_1
   - cloudpickle=2.0.0=pyhd3eb1b0_0
   - cryptography=37.0.1=py39hf6deb26_0
   - cycler=0.11.0=pyhd3eb1b0_0
+  - dataclasses=0.8=pyh6d0b6a4_7
   - ffmpeg=4.3.2=hbf27d7b_3
   - fonttools=4.25.0=pyhd3eb1b0_0
   - freetype=2.11.0=hd8bbffd_0
+  - frozenlist=1.2.0=py39hca72f7f_0
   - future=0.18.2=py39hecd8cb5_1
   - gettext=0.21.0=h7535e17_0
   - giflib=5.2.1=haf1e3a3_0
@@ -36,6 +44,8 @@ dependencies:
   - libcblas=3.9.0=15_osx64_mkl
   - libcxx=14.0.6=hce7ea42_0
   - libffi=3.3=hb1e8313_2
+  - libgfortran=5.0.0=11_2_0_h246ff09_26
+  - libgfortran5=11.2.0=h246ff09_26
   - libiconv=1.16=hca72f7f_2
   - libidn2=2.3.2=h9ed2024_0
   - liblapack=3.9.0=15_osx64_mkl
@@ -54,19 +64,23 @@ dependencies:
   - matplotlib-base=3.5.1=py39hfb0c5b7_1
   - mccabe=0.7.0=pyhd3eb1b0_0
   - mkl=2022.1.0=h860c996_928
+  - multidict=5.2.0=py39hca72f7f_2
   - munkres=1.1.4=py_0
   - ncurses=6.3=hca72f7f_3
   - nettle=3.7.3=h230ac6f_1
   - ninja=1.10.2=hecd8cb5_5
   - ninja-base=1.10.2=haf03e11_5
-  - numpy=1.22.1=py39h9d9ce41_0
+  - numpy=1.22.3=py39h214027c_2
+  - oauthlib=3.2.0=pyhd8ed1ab_0
   - openh264=2.1.1=h8346a28_0
   - openssl=1.1.1q=hca72f7f_0
   - packaging=21.3=pyhd3eb1b0_0
   - pillow=9.2.0=py39hde71d04_1
   - pip=22.1.2=py39hecd8cb5_0
   - platformdirs=2.4.0=pyhd3eb1b0_0
+  - pyasn1=0.4.8=pyhd3eb1b0_0
   - pycparser=2.21=pyhd3eb1b0_0
+  - pyjwt=2.4.0=py39hecd8cb5_0
   - pylint=2.12.2=py39hecd8cb5_1
   - pyopenssl=22.0.0=pyhd3eb1b0_0
   - pysocks=1.7.1=py39hecd8cb5_0
@@ -74,8 +88,11 @@ dependencies:
   - python-dateutil=2.8.2=pyhd3eb1b0_0
   - python_abi=3.9=2_cp39
   - pytorch=1.12.0=cpu_py39h9b0ea23_2
+  - pytz=2022.1=py39hecd8cb5_0
   - readline=8.1.2=hca72f7f_1
   - requests=2.28.1=py39hecd8cb5_0
+  - scipy=1.8.1=py39hfa1a3ab_0
+  - seaborn=0.11.2=pyhd3eb1b0_0
   - setuptools=61.2.0=py39hecd8cb5_0
   - six=1.16.0=pyhd3eb1b0_1
   - sleef=3.5.1=h6db0672_2
@@ -92,10 +109,12 @@ dependencies:
   - wrapt=1.13.3=py39hca72f7f_2
   - x264=1!161.3030=h0d85af4_1
   - xz=5.2.5=hca72f7f_1
+  - yarl=1.6.3=py39h9ed2024_0
   - zlib=1.2.12=h4dc903c_2
   - zstd=1.5.2=hcb37349_0
   - pip:
-    - ale-py==0.7.5
+    - absl-py==1.2.0
+    - ale-py==0.7.4
     - appdirs==1.4.4
     - audeer==1.18.0
     - audiofile==1.1.0
@@ -103,12 +122,16 @@ dependencies:
     - audtorch==0.6.4
     - autorom==0.4.2
     - autorom-accept-rom-license==0.4.2
+    - cachetools==5.2.0
     - charset-normalizer==2.1.0
     - click==8.1.3
     - decorator==5.1.1
     - docker-pycreds==0.4.0
     - gitdb==4.0.9
     - gitpython==3.1.27
+    - google-auth==2.9.1
+    - google-auth-oauthlib==0.4.6
+    - grpcio==1.47.0
     - gym==0.25.0
     - gym-notices==0.0.7
     - importlib-metadata==4.12.0
@@ -116,30 +139,38 @@ dependencies:
     - joblib==1.1.0
     - librosa==0.9.2
     - llvmlite==0.38.1
+    - markdown==3.4.1
+    - markupsafe==2.1.1
     - numba==0.55.2
     - opencv-python==4.6.0.66
     - pandas==1.4.3
     - pathtools==0.1.2
     - pooch==1.6.0
     - promise==2.3
-    - protobuf==3.20.1
+    - protobuf==3.19.4
     - psutil==5.9.1
+    - pyasn1-modules==0.2.8
     - pyparsing==3.0.9
-    - pytz==2022.1
     - pyyaml==6.0
+    - requests-oauthlib==1.3.1
     - resampy==0.3.1
+    - rsa==4.9
     - scikit-learn==1.1.1
-    - scipy==1.8.1
     - sentry-sdk==1.8.0
     - setproctitle==1.2.3
     - shortuuid==1.0.9
     - smmap==5.0.0
     - soundfile==0.10.3.post1
     - sox==1.4.1
+    - stable-baselines3==1.6.1a0
     - tabulate==0.8.10
+    - tensorboard==2.9.1
+    - tensorboard-data-server==0.6.1
+    - tensorboard-plugin-wit==1.8.1
     - threadpoolctl==3.1.0
     - tqdm==4.64.0
     - urllib3==1.26.10
     - wandb==0.12.21
+    - werkzeug==2.2.0
     - zipp==3.8.1
 prefix: /Users/lucyzhang/miniconda3/envs/nma2022
